[package]
name = "async-workshop"
version = "0.1.0"
authors = ["Dan Munckton <dan.munckton@deliveroo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
futures = "0.3.12"
rand = "0.8.3"
